--- a/timbr/IconPickerViewController.xib
+++ b/timbr/IconPickerViewController.xib
@@ -16,8 +16,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Nwr-uA-prE">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="8" y="0.0" width="584" height="600"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="quf-XY-BJe">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -28,8 +28,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Nwr-uA-prE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="907-pF-HNy"/>
-                <constraint firstAttribute="trailing" secondItem="Nwr-uA-prE" secondAttribute="trailing" id="AKY-ri-p8j"/>
+                <constraint firstItem="Nwr-uA-prE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="907-pF-HNy"/>
+                <constraint firstAttribute="trailing" secondItem="Nwr-uA-prE" secondAttribute="trailing" constant="8" id="AKY-ri-p8j"/>
                 <constraint firstAttribute="bottom" secondItem="Nwr-uA-prE" secondAttribute="bottom" id="TIq-g1-VDy"/>
                 <constraint firstItem="Nwr-uA-prE" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="nJ3-qe-W2b"/>
             </constraints>
