--- a/timbr/HomeCollectionViewCell.xib
+++ b/timbr/HomeCollectionViewCell.xib
@@ -37,6 +37,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Waz-Hh-8np" firstAttribute="centerY" secondItem="SeS-Aw-Loz" secondAttribute="centerY" id="4Dn-Wj-JY9"/>
                 <constraint firstItem="Waz-Hh-8np" firstAttribute="centerX" secondItem="SeS-Aw-Loz" secondAttribute="centerX" id="Dv3-aD-RwC"/>
