--- a/timbr/HomeCollectionViewCell.xib
+++ b/timbr/HomeCollectionViewCell.xib
@@ -27,7 +27,7 @@
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                         <state key="normal" title="+">
-                            <color key="titleColor" red="0.51372549020000002" green="0.20392156859999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="0.51372549019607838" green="0.20392156862745098" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
